adhoc fix of gallery slider like button and adjust dark mode color

--- a/styles/global.css
+++ b/styles/global.css
@@ -18,7 +18,7 @@
   --secondary-color: #3f3f46;
   --tertiary-color: #636366;
   --cool-color: rgb(250, 250, 250);
-  --box-color: #252525;
+  --box-color: #2b2b2b;
   --box-style: rgba(0, 0, 0, 0.5) 0px 2px 8px 0px;
 }
 
@@ -94,7 +94,7 @@ img {
 }
 
 /* adhoc global hack for SVGs except those in articles */
-svg:not(article svg, label svg) {
+svg:not(article svg, button svg) {
   color: var(--cool-color);
 }
 
